fixed z-index

--- a/themes/blankslate-child/style.css
+++ b/themes/blankslate-child/style.css
@@ -16,6 +16,7 @@ Template: blankslate
    text-transform: uppercase;
    text-align: center;
    font-size: 35px;
+   margin-top: 60px;
  }
 
  .form-style-8{
